--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "@google/generative-ai": "^0.14.1",
-    "@supabase/supabase-js": "^2.44.4",
-    "openai": "^4.52.7"
+    "@supabase/supabase-js": "^2.44.4"
   }
 }
